--- a/style.css
+++ b/style.css
@@ -88,8 +88,8 @@ input {
     width: 387px;
     height: 387px;
     left: 70px;
-    top: 122px;
-    background-image: url("img\bell.png");
+  /* top: 122px; */
+    background-image: url("img/bell.png");
 }
 
 .banner > .letters {
@@ -165,7 +165,7 @@ input {
     height: 686px;
     left: 1051px;
     margin-left: auto;
-    background-image: url("img\sofa promotional header.png");
+    background-image: url("img/sofa promotional header.png");
 }
 
 /* --------- Banner section Styles end here -------*/
@@ -296,6 +296,7 @@ input {
     line-height: 16px;
     columns: #151875;
     margin-left: 4px;
+    font-family: 'Josefin Sans';
 }
 
 .product:hover .icons,
@@ -420,7 +421,7 @@ input {
 .details2 {
     display: flex;
     align-items: center;
-    width: 85px;
+    width: 100%;
 }
 
 .det-right {
@@ -428,3 +429,88 @@ input {
     align-items: center;
     width: 85px;
 }
+
+.det-left {
+    display: flex;
+    align-items: center;    
+}
+
+/* =======Latest Product Styles end here==*/
+
+/* =======Shopex Styles begin here ====*/
+
+.shopex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+   /* margin-bottom: 50px;
+    padding-bottom: 40px; */
+}
+
+.shopex-offers {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65%;
+    height: 320px;
+    box-shadow: 0px 8px 40px rgba(49, 32, 138, 0.05);    
+}
+
+.text4 > p {
+    color: #151875;
+    width: 132px;
+    height: 22px;
+    font: 'Josefin Sans';
+}
+
+.text5 > p {
+    color: #1A0B5B4D;
+    font: 'Lato';
+    font-weight: 700;
+    line-height: 16px;
+    align-items: center;
+}
+
+/* ========= Unique Feature Styles begin here====*/
+
+.unique-feature {
+    width:1920px;
+    height: 576px;
+    left: -1px;
+    position: absolute;
+    background-color: #F1F0FF;
+}
+
+.unique-sofa {
+    position: absolute;
+    width: 509px;
+    height: 550px;
+    left: 40px;
+    background-image: url("img/unique-sofa.png");
+}
+
+.unique-letters {
+    position: absolute;
+    display: flex;  
+}
+
+.unique-words {
+    position: absolute;
+    left: 543px;
+    top: 97px;
+    width: 507px;
+    height: 92px;
+}
+
+.unique-text {
+    position: absolute;
+    width: 113px;
+    height: 14px;
+    top: 386px;
+    left: 719px;
+}
+
